--- a/src/main/webapp/cart.xhtml
+++ b/src/main/webapp/cart.xhtml
@@ -18,7 +18,7 @@
                         #{article.name}
                 </h:column>
                 <h:column>
-                    <f:facet name="header">Available amount</f:facet>
+                    <f:facet name="header">Amount</f:facet>
                         #{article.amount}
                 </h:column>
                 <h:column>
@@ -29,6 +29,7 @@
         </h:form>
         <br></br>
         <h:button value="Continue Shopping" outcome="index"></h:button>
+        <h:button value="Buy" outcome="index"></h:button>
     </h:body>
 </html>
 
