--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -36,6 +36,7 @@
         </h:form>
         <br></br>
         <h:button value="Cart" outcome="cart"></h:button>
+        <h:commandButton value="Login" action="login"></h:commandButton>
     </h:body>
 </html>
 
