--- a/src/main/webapp/article-update-editor.xhtml
+++ b/src/main/webapp/article-update-editor.xhtml
@@ -4,11 +4,12 @@
       xmlns:h="http://xmlns.jcp.org/jsf/html"
       xmlns:f="http://xmlns.jcp.org/jsf/core">
     <h:head>
-        <title>Editor Page</title>
+        <title>Update article</title>
     </h:head>
     <h:body>
-        <h1>Editor Page</h1>
+        <h1>Update article</h1>
         <h:form>
+
             <h:dataTable value="#{articlesManagedBean.articlesList}" var="articles">
                 <h:column>
                     <f:facet name="header">Id</f:facet>
@@ -26,17 +27,35 @@
                     <f:facet name="header">Price per unit</f:facet>
                         #{articles.pricePerUnit}
                 </h:column>
-                <h:column>
-                    <f:facet name="header">Action</f:facet>
-                    <h:commandButton value="Update" action="article-update-editor"/>
-
-                </h:column>
 
             </h:dataTable>
+
+            <br></br>
+            <br></br>
+            
+            <h3>Please input Article ID, Name, Amount and Price from the list above</h3>
+
+            Input Article ID: <h:inputText value="#{articlesManagedBean.articleId}"/>
+
             <br></br>
 
+            Input Article Name: <h:inputText value="#{articlesManagedBean.articleName}"/>
 
-            <h:commandButton value="Index" action="index"/>
+            <br></br>
+
+            Input Article Amount: <h:inputText value="#{articlesManagedBean.articleAmount}"/>
+
+            <br></br>
+
+            Input Article Price: <h:inputText value="#{articlesManagedBean.articlePrice}"/>
+
+            <br></br>
+            <br></br>
+
+            <h:commandButton value="Update Article" action="#{articlesManagedBean.updateArticle()}" />
+
+            <br></br>
+
         </h:form>
     </h:body>
 </html>
