--- a/src/main/webapp/article-update-admin.xhtml
+++ b/src/main/webapp/article-update-admin.xhtml
@@ -35,7 +35,7 @@
             
             <h3>Please input Article ID, Name, Amount and Price from the list above</h3>
 
-            Input Article ID: <h:inputText value="#{articlesManagedBean.articleId}"/>
+            Input Article ID: <h:inputText value="#{articlesManagedBean.articleId}" required="true" requiredMessage="ID is mandatory"/>
 
             <br></br>
 
