--- a/src/main/webapp/user-register.xhtml
+++ b/src/main/webapp/user-register.xhtml
@@ -9,20 +9,20 @@
         <h1>Register User</h1>
         <h:form>
 
-            Input Username: <h:inputText value="#{usersManagedBean.usernameInput}"/>
+            Input Username: <h:inputText value="#{userManagedBean.usernameInput}"/>
 
             <br></br>
 
-            Input Password: <h:inputSecret value="#{usersManagedBean.passwordInput}"/>
+            Input Password: <h:inputSecret value="#{userManagedBean.passwordInput}"/>
 
             <br></br>
 
-            Input Role (1 - admin, 2 - editor): <h:inputText value="#{usersManagedBean.roleId}"/>
+            Input Role (1 - admin, 2 - editor): <h:inputText value="#{userManagedBean.roleId}"/>
             <br></br>
             <br></br>
             
             Register New User
-            <h:commandButton value="Register" action="#{usersManagedBean.register()}" />
+            <h:commandButton value="Register" action="#{userManagedBean.register()}" />
 
             <br></br>
 
