--- a/src/main/webapp/article-update-admin.xhtml
+++ b/src/main/webapp/article-update-admin.xhtml
@@ -10,7 +10,7 @@
         <h1>Update article</h1>
         <h:form>
 
-            <h:dataTable value="#{articlesManagedBean.articlesList}" var="articles">
+            <h:dataTable value="#{articlesManagedBean.articlesList}" var="articles" cellpadding="2" cellspacing="0" border="1">
                 <h:column>
                     <f:facet name="header">Id</f:facet>
                         #{articles.id}
