--- a/src/main/webapp/editor.xhtml
+++ b/src/main/webapp/editor.xhtml
@@ -28,7 +28,7 @@
                 </h:column>
                 <h:column>
                     <f:facet name="header">Action</f:facet>
-                    <h:commandButton value="Update" action="article-update-editor"/>
+                    <h:commandButton value="Update" action="article-update"/>
 
                 </h:column>
 
