--- a/src/main/webapp/admin.xhtml
+++ b/src/main/webapp/admin.xhtml
@@ -28,7 +28,7 @@
                 </h:column>
                 <h:column>
                     <f:facet name="header">Action</f:facet>
-                    <h:commandButton value="Update" action="article-update-admin"/>
+                    <h:commandButton value="Update" action="article-update"/>
                     <h:commandButton value="Delete" action="#{articlesManagedBean.removeArticle(articles.id)}"/>
                 </h:column>
 
